# RCMake

./: DESCRIPTION  NAMESPACE  README.md
R/: create.package.R  execute.cmake.R
inst/: CMakeLists.txt
inst/RCmakeTestR/: DESCRIPTION
inst/RCmakeTestRcpp/: NAMESPACE
inst/RCmakeTestRcpp/R/: rcpp_hello_world.R
inst/roxygenize/: _.R  _collate.R  _collatenamespace.R  _collatenamespacerd.R  _collaterd.R  _namespace.R  _namespacerd.R  _rd.R  gen.R
inst/tests/: test-create.package.R
inst/tests/RCMakeTestRoxygenize/: DESCRIPTION
inst/tests/RCMakeTestRoxygenize/R/: rcpp_hello_world.R
inst/tests/RCMakeTestRoxygenize/src/: rcpp_hello_world.h
inst/tests/RCmakeTestRcpp/: DESCRIPTION
inst/tests/RCmakeTestRcpp/src/: rcpp_hello_world.h
man/: create.R.project.Rd  create.Rcpp.project.Rd  execute.cmake.Rd  list.IDE.Rd
tests/: create.package.tests.R  run-all.R
